Add logo source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div id="hero">
-      <img class="logo-white" />
+      <img class="logo-white" src="./img/odin-lined.png" />
       <h1 class="headline">Your Career in Web Development Starts Here</h1>
       <p class="quote">
         Providing resources we wish we had learning web development. Designed to
