--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
 
     <script src="./script.js" defer></script>
@@ -11,7 +11,7 @@
 
   <body>
     <div id="hero">
-      <img class="logo-white" src="./img/odin-lined.png" />
+      <img class="logo-hero logo-white" src="./img/odin-lined.png" />
       <h1 class="headline">Your Career in Web Development Starts Here</h1>
       <p class="quote">
         Providing resources we wish we had learning web development. Designed to
@@ -20,61 +20,64 @@
       </p>
     </div>
     <div id="form-section">
-      <div class="logo-and-name">
-        <img class="logo-black" />
-        <div>The Odin Project</div>
-      </div>
-      <div id="cta-heading">Create an account</div>
-      <div id="cta-text">Let's get started on your Web Development Journey</div>
-
-      <form action method>
-        <div class="two-col">
-          <div>
-            <label for="first-name">First Name</label>
-            <input type="text" name="first-name" id="first-name" />
-          </div>
-          <div>
-            <label for="last-name">Last Name</label>
-            <input type="text" name="last-name" id="last-name" />
-          </div>
+      <header>
+        <div class="logo-and-name">
+          <img class="logo-black" src="./img/odin-lined.png" />
+          <div class="logo-name">The Odin Project</div>
         </div>
+      </header>
 
-        <div>
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" />
+      <main>
+        <div id="cta-heading">Create an account</div>
+        <div id="cta-text">
+          Let's get started on your Web Development Journey
         </div>
-
-        <div>
-          <label for="phone-number">Phone Number</label>
-          <input type="tel" name="phone-number" id="phone-number" />
-        </div>
-
-        <div class="two-col">
-          <div>
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" />
+        <form action method>
+          <div class="two-col">
+            <div class="form-input">
+              <label for="first-name">First Name</label>
+              <input type="text" name="first-name" id="first-name" />
+            </div>
+            <div class="form-input">
+              <label for="last-name">Last Name</label>
+              <input type="text" name="last-name" id="last-name" />
+            </div>
           </div>
-          <div>
-            <label for="confirm-password">Confirm Password</label>
-            <input
-              type="password"
-              name="confirm-password"
-              id="confirm-password" />
+          <div class="form-input">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
           </div>
+          <div class="form-input">
+            <label for="phone-number">Phone Number</label>
+            <input type="tel" name="phone-number" id="phone-number" />
+          </div>
+          <div class="two-col">
+            <div class="form-input">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" />
+            </div>
+            <div class="form-input">
+              <label for="confirm-password">Confirm Password</label>
+              <input
+                type="password"
+                name="confirm-password"
+                id="confirm-password" />
+            </div>
+          </div>
+          <button type="submit">Create Account</button>
+        </form>
+        <div class="question">
+          Already have an account? <a href="#">Log in</a>
         </div>
+      </main>
 
-        <button type="submit">Create Account</button>
-      </form>
-
-      <div class="question">
-        Already have an account? <a href="#">Log in</a>
-      </div>
-
-      <div class="credit">@Copyright John Kelly C. Temeña</div>
-      <div class="disclaimer">
-        *This webpage is only a webpage project for The Odin Project. To
-        register for The Odin Project, sign up for free on theodinproject.com
-      </div>
+      <footer>
+        <div class="credit">@Copyright John Kelly C. Temeña</div>
+        <div class="disclaimer">
+          *This webpage is only a webpage project for The Odin Project. To
+          register for The Odin Project, sign up for free on theodinproject.com
+        </div>
+      </footer>
     </div>
   </body>
 </html>
