--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         fill in the gap for people who are trying to hack it on their own but
         still want a high quality education.
       </p>
+      <p class="attribution">
+        Image by
+        <a
+          href="https://pixabay.com/users/mythologyart-34077399/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8920792"
+          >MythologyArt</a
+        >
+        from
+        <a
+          href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=8920792"
+          >Pixabay</a
+        >
+      </p>
     </div>
     <div id="form-section">
       <header>
