--- a/index.html
+++ b/index.html
@@ -54,32 +54,42 @@
           <div class="two-col">
             <div class="form-input">
               <label for="first-name">First Name</label>
-              <input type="text" name="first-name" id="first-name" />
+              <input type="text" name="first-name" id="first-name" required />
             </div>
             <div class="form-input">
               <label for="last-name">Last Name</label>
-              <input type="text" name="last-name" id="last-name" />
+              <input type="text" name="last-name" id="last-name" required />
             </div>
           </div>
           <div class="form-input">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              pattern="^\w+((\.|-)?\w+)+?@\w+(-?\w+)?\.\w{2,3}(\.\w{2,3})?$"
+              required />
           </div>
           <div class="form-input">
             <label for="phone-number">Phone Number</label>
-            <input type="tel" name="phone-number" id="phone-number" />
+            <input
+              type="tel"
+              name="phone-number"
+              id="phone-number"
+              pattern="[0-9]{10}" />
           </div>
           <div class="two-col">
             <div class="form-input">
               <label for="password">Password</label>
-              <input type="password" name="password" id="password" />
+              <input type="password" name="password" id="password" required />
             </div>
             <div class="form-input">
               <label for="confirm-password">Confirm Password</label>
               <input
                 type="password"
                 name="confirm-password"
-                id="confirm-password" />
+                id="confirm-password"
+                required />
             </div>
           </div>
           <button type="submit">Create Account</button>
