--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="form-section">
       <header>
         <div class="logo-and-name">
-          <img class="logo-black" src="./img/odin-lined.png" />
+          <img id="hero-logo" class="logo-black" src="./img/odin-lined.png" />
           <div class="logo-name">The Odin Project</div>
         </div>
       </header>
