--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,8 +16,9 @@
   </head>
 
   <body>
+    <button id="theme-button"></button>
     <div id="hero">
-      <img class="logo-hero logo-white" src="./img/odin-lined.png" />
+      <img class="logo-hero" src="./img/odin-lined.png" />
       <h1 class="headline">Your Career in Web Development Starts Here</h1>
       <p class="quote">
         Providing resources we wish we had learning web development. Designed to
@@ -40,7 +41,7 @@
     <div id="form-section">
       <header>
         <div class="logo-and-name">
-          <img id="hero-logo" class="logo-black" src="./img/odin-lined.png" />
+          <img id="logo-form" class="logo-black" src="./img/odin-lined.png" />
           <div class="logo-name">The Odin Project</div>
         </div>
       </header>
