Replace "The Odin Project" to "Odin"

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <header>
         <div class="logo-and-name">
           <img id="logo-form" class="logo-black" src="./img/odin-lined.png" />
-          <div class="logo-name">The Odin Project</div>
+          <div class="logo-name">Odin</div>
         </div>
       </header>
 
