--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet" />
 
+    <link rel="icon" type="image/x-icon" href="./img/odin.ico" />
+
     <script src="./script.js" defer></script>
   </head>
 
