Add The Odin Project page link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         <div class="credit">@Copyright John Kelly C. Temeña</div>
         <div class="disclaimer">
           *This webpage is only a webpage project for The Odin Project. To
-          register for The Odin Project, sign up for free on theodinproject.com
+          register for The Odin Project, sign up for free on
+          <a href="https://www.theodinproject.com/">theodinproject.com</a>
         </div>
       </footer>
     </div>
