--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
               name="email"
               id="email"
               pattern="^\w+((\.|-)?\w+)+?@\w+(-?\w+)?\.\w{2,3}(\.\w{2,3})?$"
+              placeholder="example@mail.com"
               required>
             <p class="invalid-message" id="email-error"></p>
           </div>
@@ -91,7 +92,8 @@
               type="tel"
               name="phone-number"
               id="phone-number"
-              pattern="[0-9]{10}">
+              pattern="[0-9]{10}"
+              placeholder="10 digit phone number">
             <p class="invalid-message" id="phone-number-error"></p>
           </div>
           <div class="two-col">
