Update credit message

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       <footer>
         <div class="credit">
-          Created by&nbsp;
+          © 2024 - Designed and Developed by&nbsp;
           <a id="github-link" href="https://github.com/JohnKelly-T">
             John Kelly&nbsp;
             <img id="github-icon" src="./img/github-icon.png">
